fixing layout issues and consistencies

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,7 +18,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  /*box-shadow: 0 0 3px 0 rgba(255, 0, 255, 0.3);*/
+  box-shadow: 0 0 3px 0 rgba(255, 0, 255, 0.3);
 }
 
 html,
@@ -439,8 +439,8 @@ figcaption > p {
   grid-column: 2 / 4;
 }
 
-.single-post h2 {
-  margin: 0 0 1rem 0;
+.single-post h3 {
+  margin: 0 0 4rem 0;
 }
 
 /*******************************
